--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../CSS/pokemon.css">
+  <link rel="stylesheet" href="pokemon.css">
 </head>
 <body>
   <!-- Navigation bar starts here -->
