--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="../Images/autumn.jpg" alt="Autumn" width="1250" height="853">
+      <img src="autumn.jpg" alt="Autumn" width="1250" height="853">
       <div class="carousel-caption">
         <h1 class="display-1">Autumn season</h1>
         <p class="lead">Beauty of nature!</p>
       </div>
     </div>
     <div class="item">
-      <img src="../Images/nature.jpeg" alt="Nature" width="1250" height="853">
+      <img src="nature.jpeg" alt="Nature" width="1250" height="853">
       <div class="carousel-caption">
         <h1 class="display-1">Flowers</h1>
         <p class="lead">Beauty of nature</p>
       </div>
     </div>
     <div class="item">
-      <img src="../Images/rails.jpg" alt="Railway" width="1250" height="853">
+      <img src="rails.jpg" alt="Railway" width="1250" height="853">
       <div class="carousel-caption">
         <h1 class="display-1">Greenery</h1>
         <p class="lead">Beauty of nature</p>
