--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
   <div class="employee">
     <h1 class="animated infinite flash">Employees</h1>
   </div>
-  <div class="col-lg-4 boy1" id="boy1"><img src="../Images/boy1.jpeg" alt="Boy1" class="img-circle animated infinite bounce img-thumbnail">
+  <div class="col-lg-4 boy1" id="boy1"><img src="boy1.jpeg" alt="Boy1" class="img-circle animated infinite bounce img-thumbnail">
   <h1>Developer</h1>
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
 <button class="btn btn-primary btn-lg">View profile &raquo;</button>
   </div>
-  <div class="col-lg-4 boy2"><img src="../Images/boy2.jpeg" alt="Boy2" class="img-circle animated infinite wobble img-thumbnail">
+  <div class="col-lg-4 boy2"><img src="boy2.jpeg" alt="Boy2" class="img-circle animated infinite wobble img-thumbnail">
     <h1>Senior Engineer</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
    <button class="btn btn-primary btn-lg">View profile &raquo;</button>
   </div>
-  <div class="col-lg-4 boy3"><img src="../Images/boy3.jpeg" alt="Boy3" class="img-circle animated infinite bounce img-thumbnail">
+  <div class="col-lg-4 boy3"><img src="boy3.jpeg" alt="Boy3" class="img-circle animated infinite bounce img-thumbnail">
     <h1>Designer</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
    <button class="btn btn-primary btn-lg">View profile &raquo;</button>
