remove unwanted animations.

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
 
 <div class="row" id="r">
   <div class="employee">
-    <h1 class="animated infinite flash">Employees</h1>
+    <h1>Employees</h1>
   </div>
-  <div class="col-lg-4 boy1" id="boy1"><img src="assets/images/boy1.jpeg" alt="Boy1" class="img-circle animated infinite bounce img-thumbnail">
+  <div class="col-lg-4 boy1" id="boy1"><img src="assets/images/boy1.jpeg" alt="Boy1" class="img-circle img-thumbnail">
   <h1>Developer</h1>
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
 <button class="btn btn-primary btn-lg">View profile &raquo;</button>
   </div>
-  <div class="col-lg-4 boy2"><img src="assets/images/boy2.jpeg" alt="Boy2" class="img-circle animated infinite wobble img-thumbnail">
+  <div class="col-lg-4 boy2"><img src="assets/images/boy2.jpeg" alt="Boy2" class="img-circle img-thumbnail">
     <h1>Senior Engineer</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
    <button class="btn btn-primary btn-lg">View profile &raquo;</button>
   </div>
-  <div class="col-lg-4 boy3"><img src="assets/images/boy3.jpeg" alt="Boy3" class="img-circle animated infinite bounce img-thumbnail">
+  <div class="col-lg-4 boy3"><img src="assets/images/boy3.jpeg" alt="Boy3" class="img-circle img-thumbnail">
     <h1>Designer</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, delectus.</p>
    <button class="btn btn-primary btn-lg">View profile &raquo;</button>
@@ -131,8 +131,8 @@
     <div class="col-md-5" id="para1"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni cum illum reprehenderit libero possimus praesentium deserunt soluta suscipit tempora.</p></div>
   </div>
   <div class="row">
-<div class="col-md-5" id="para2"><p class="lead  animated infinite flash">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni cum illum reprehenderit libero possimus praesentium deserunt soluta suscipit tempora.</p></div>
-<div class="col-md-7" id="kid2"><img src="assets/images/kid.jpg" alt="Kid"  class="animated infinite bounce"></div>
+<div class="col-md-5" id="para2"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni cum illum reprehenderit libero possimus praesentium deserunt soluta suscipit tempora.</p></div>
+<div class="col-md-7" id="kid2"><img src="assets/images/kid.jpg" alt="Kid"></div>
     </div>
   <div class="row">
     <div class="col-md-7" id="kid3"><img src="assets/images/kid.jpg" alt="Kid"></div>
